--- a/gbs-miscall-rates.bib
+++ b/gbs-miscall-rates.bib
@@ -1,12 +1,49 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Eric Anderson at 2017-09-08 16:04:33 -0700 
+%% Created for Eric Anderson at 2017-09-19 10:15:50 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bonnethead_shark2015,
+	Author = {Portnoy, D. S. and Puritz, J. B. and Hollenbeck, C. M. and Gelsleichter, J. and Chapman, D. and Gold, J. R.},
+	Date-Added = {2017-09-19 17:11:28 +0000},
+	Date-Modified = {2017-09-19 17:15:48 +0000},
+	Doi = {10.1111/mec.13441},
+	Journal = {Molecular Ecology},
+	Pages = {5877--5885},
+	Title = {Selection and sex-biased dispersal in a coastal shark: the influence of philopatry on adaptive variation},
+	Url = {http://dx.doi.org/10.1111/mec.13441},
+	Volume = {24},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/mec.13441}}
+
+@article{reddrum2016,
+	Author = {Puritz, Jonathan B and Gold, John R and Portnoy, David S},
+	Date-Added = {2017-09-19 16:46:07 +0000},
+	Date-Modified = {2017-09-19 16:46:24 +0000},
+	Journal = {Scientific reports},
+	Pages = {36095},
+	Publisher = {Nature Publishing Group},
+	Title = {Fine-scale partitioning of genomic variation among recruits in an exploited fishery: causes and consequences},
+	Volume = {6},
+	Year = {2016}}
+
+@article{damselfly2015,
+	Author = {Swaegers, J. and Mergeay, J. and Van Geystelen, A. and Therry, L. and Larmuseau, M. H. D. and Stoks, R.},
+	Date-Added = {2017-09-08 23:55:12 +0000},
+	Date-Modified = {2017-09-08 23:55:28 +0000},
+	Doi = {10.1111/mec.13462},
+	Journal = {Molecular Ecology},
+	Pages = {6163--6176},
+	Title = {Neutral and adaptive genomic signatures of rapid poleward range expansion},
+	Url = {http://dx.doi.org/10.1111/mec.13462},
+	Volume = {24},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/mec.13462}}
 
 @article{snails2016,
 	Author = {Ravinet, Mark and Westram, Anja and Johannesson, Kerstin and Butlin, Roger and Andr{\'e}, Carl and Panova, Marina},
